--- a/css_basic/base.css
+++ b/css_basic/base.css
@@ -11,7 +11,7 @@ body {
     color: #333333;
     background-color: #FFF9FB; 
     padding: 20px;
-    max-width: 1200px;
+    max-width:100%;
     margin: 0 auto;
 }
 
@@ -41,21 +41,20 @@ header li a:hover {
 
 
 main {
-    display: flex;
-    gap: 20px;
+   
     margin-bottom: 20px;
 }
 
 article {
-    flex: 3;
+  
     background-color: white;
-    padding: 20px;
+
 }
 
 aside {
-    flex: 1;
+
     background-color: white;
-    padding: 15px;
+
 }
 
 h1 {
