--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -29,12 +29,12 @@ aside {
 
 header {
     padding: 20px;
-    background-color: #f8f8f8;
+    background-color: rgb(240, 132, 132);
 }
 
 footer {
     padding: 20px;
-    background-color: #f8f8f8;
+    background-color:rgb(240, 132, 132);
 }
 
 
@@ -48,6 +48,11 @@ header ul {
 header li {
     margin: 0 10px;
 }
+li:hover{
+    background-color: rgb(243, 210, 243);
+    border-radius: 5px;
+   }
+
 
 /* Responsive styles for smartphones */
 @media (max-width: 768px) {
@@ -67,4 +72,6 @@ header li {
     header li {
         margin: 5px 0;
     }
+  
+    
 }
